<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainChoose" android:background="@color/colorBackground">

    <TextView
            android:text="@string/emporio_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:fontFamily="@font/montserrat"
            android:textSize="40sp" android:textStyle="bold" android:textColor="#fff" android:gravity="center"/>
    <Button
            android:text="@string/doctorBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/docBtn" tools:ignore="MissingConstraints"
            android:background="@color/colorPrimary" android:textColor="@color/colorAccent" android:textSize="30sp"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/nurseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nurseBtn" tools:ignore="MissingConstraints"
            android:background="@color/colorPrimary" android:textColor="@color/colorAccent" android:textSize="30sp"
            android:textStyle="bold" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/docBtn"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <Button
            android:text="@string/nutriologistBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nutriBtn" tools:ignore="MissingConstraints"
            android:background="@color/colorPrimary" android:textColor="@color/colorAccent" android:textSize="30sp"
            android:textStyle="bold" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nurseBtn" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/selectBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selectBtn" android:textStyle="bold"
            android:textColor="@color/colorAccent" android:textSize="20sp"
            android:background="@color/colorPrimaryDark" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>